--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script defer type="module" src="/main.js"></script>
+    <script defer type="module" src="src/main.js"></script>
   </head>
   <body>
     <div id="app"></div>
